* Note: The Rift Addon API still doesn't support native Event.Unit.Detail.Relation, so until it does, the above will remain in the standard damage/heal handler.
* Fixed: Prevented UnitObj.Health sometimes being nil.
* Removed: Redundant raid queue code. Slight performance increase.

Menu
* Fixed: All custom color settings will now work as intended. It'll remember default colors, and last color chosen when switching to/from custom.
* Change: Custom colors for objects are applied immediately.

Notify and Chat Events
* Fixed: Removed global references.
* Change: Prevented capture method sending nil for Target.
* Change: Now sends Boss.Name as the Caster field.

New Castbar System (During Alpha)
* Note: The system is now almost complete. Actual bars are created but forced to disabled for this build.
* Note: Next build should see them implemented in to KBM as configurable castbars (see below).
* New: Engine and Bar for Player castbar. (Disabled)
* New: Engine and Bar for Target castbar. (Disabled)
* New: Engine and Bar Player Focus castbar. (Disabled)

Raids
* Endless Eclipse
** Dreadlord Goloch
*** New: Added Alert for Baneful Smash.
* Frozen Tempest
** Kolmasveli and Toinenveli
*** New: Timer for 60% DPS gate breach for first hide. (1:30)
*** Change: Kolmasveli's Hide mechanic is now cyan (light blue) to match his Ire mechanic.
*** Change: Kolmasveli's Ire debuff mechanic spy is now blue.
*** Change: Tempest Flare now defaults to yellow, as it's an interrupt mechanic.
** Artifex Zaviel
*** New: Updated UTID for Zaviel. (Recording will now start)
*** New: Updated UTID for Power Conducer.

Slivers
* Grim Awakening
** Magma Lord Kaliban
*** New: Added Alert for Sanguine Incantation. (Standard Yellow interrupt)
*** Change: Alert color changed for soul shatter. Now Orange by default.
** Salvarola
*** New: Added Mechanic Spy for Curse of Magma.
*** New: Added Enrage Timer for 5:30.
*** Change: Incineration timer changed from a Wait style to standard.
** Ultane